[package]
name = "endicon"
version = "3.0.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
keywords = ["codec", "encoding", "decoding", "endianness", "endian"]
repository = "https://github.com/psilocybin/endicon"
description = "Implementations of codicon traits for endianness encodings"
documentation = "https://docs.rs/endicon"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/endicon", workflow = "test" }
#github = { repository = "enarx/endicon", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/endicon" }
is-it-maintained-open-issues = { repository = "enarx/endicon" }

[dependencies]
codicon = "3.0"
